--- a/src/theme.css
+++ b/src/theme.css
@@ -219,11 +219,12 @@ header.blog-header {
 }
 main.blog-content {
     grid-row: 2;
-    grid-column: 3/11;
+    grid-column: 1/10;
+    margin-left: 30px;
 }
 div.blog-navi {
     grid-row: 2;
-    grid-column: 1/3;
+    grid-column: 10/13;
 }
 /* todo: move it to the bottom */
 div.blog-aside {
@@ -357,6 +358,25 @@ div.proof-btn img {
 div.proof, div.proof * {
     transition-duration: 1s;
 }
+
+/* Loading */
+div.loading {
+    display: flex;
+    justify-content: center;
+    padding-top: 48px;
+}
+
+
+/* ===== Bibliography ===== */
+
+ol.biblist {
+    color: rgb(58, 58, 58);
+}
+
+li.bibitem {
+    color: #303030;
+}
+
 
 /* ===== E. Responsive layout ===== */
 @media only screen and (max-width: 768px) {
